--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms</title>
     <style>
+      body {
+        font-size: 14px;
+      }
       .Container {
         margin-left: 100px;
         margin-right: 100px;
@@ -13,12 +16,13 @@
           Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         color: #7a7a7a;
       }
-      .Terms{
+
+      .Terms {
         width: 100%;
         height: 400px;
         background-color: rgba(184, 217, 238);
-        font-size: 50px;
-        
+        /* font-size: 25px; */
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,21 +30,34 @@
           Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
         color: #7a7a7a;
       }
+
       .content {
-        font-size: 15px;
+        font-size: 16px;
       }
       .heading-1 {
         color: rgb(90, 190, 248);
-        font-size: 25px;
+        font-size: 20px;
       }
       .sub-heading {
         color: rgb(90, 190, 248);
-        font-size: 25px;
+        font-size: 16px;
+      }
+      p {
+        font-size: 16px;
+      }
+      @media screen and (max-width: 600px) {
+        .Container {
+          margin-left: 10px;
+          margin-right: 10px;
+        }
+        .Terms {
+          height: 150px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="Terms"><p>Terms Of Use</p></div>
+    <div class="Terms"><h1>Terms Of Use</h1></div>
     <div class="Container">
       <p class="heading-1">1. AGREEMENT TO TERMS</p>
       <p class="content">
