--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,8 @@
     <style>
       body {
         font-size: 14px;
+        margin: 0px;
+        padding: 0px;
       }
       .Container {
         margin-left: 100px;
@@ -28,7 +30,7 @@
         align-items: center;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        color: #7a7a7a;
+        color: black;
       }
 
       .content {
